force-app/main/default/objects/Form_Dependency__c/Form_Dependency__c.object-meta.xml
<CustomObject>
    <label>Form Dependency</label>
    <nameField>
        <displayFormat>Dependency-{00000}</displayFormat>
        <label>Form Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>