force-app/main/default/objects/Form_Dependency__c/fields/Dependent_Field__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Field</label>
    <referenceTo>Form_Field__c</referenceTo>
    <relationshipLabel>Field Dependencies (Dependent Field)</relationshipLabel>
    <relationshipName>Field_Dependent_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>