force-app/main/default/objects/Form_Dependency__c/fields/Dependent_Section__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Section</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Section Dependencies</relationshipLabel>
    <relationshipName>Section_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>