force-app/main/default/objects/Form_Dependency__c/fields/On_Controlling_Value__c.field-meta.xml
<CustomField>
    <fullName>On_Controlling_Value__c</fullName>
    <label>On Controlling Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>